add new paragraf

--- a/Registration.html
+++ b/Registration.html
@@ -13,6 +13,9 @@
     <div>
 </header>
 
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti doloribus dolorum fugiat, illum ipsum maxime molestiae nemo quae quidem reprehenderit sint tempora, tenetur velit vero voluptate. Consequuntur qui quia similique.
+</p>
 
 </body>
 </html>
